# wildfire-predict-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: wildfire_graph.py
backend/app/api/routes/: analyze.py  monitoring.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  group_e.py  monitoring.py  report.py
backend/app/services/: __init__.py  confidence_metrics.py  false_positive_review.py  forest_heatmap.py  group_b_context.py  group_e_selector.py  historical_wildfire.py  location_transform.py  model_scoring.py  monitoring_summary.py  realtime_wildfire.py  risk_engine.py  secondary_analysis.py  spatial_radius.py
backend/data/ai_hub_data/ai_hub_sample/01.원천데이터/대형/강원도/: GN20220305_S_P0001_T001.json  GN20220305_S_P0001_T003.json  (+10 more)
backend/data/processed/: incidents.json  wildfire_public_data_preview.json
backend/data/산불발생_경향성_분석용_데이터/: WSQ000301_테이블정의서.xlsx
backend/data/산불발생위치도_전국/: TB_FFAS_FF_OCCRR_ALL.qix  TB_FFAS_FF_OCCRR_ALL.shp
backend/tests/: test_analyze_route.py  test_confidence_metrics.py  test_config.py  test_forest_heatmap.py  test_group_b_context.py  test_group_e_selector.py  test_historical_wildfire.py  test_ingest_wildfire_public_data.py  test_location_transform.py  test_model_scoring.py  test_monitoring_route.py  test_monitoring_summary.py  test_realtime_wildfire.py  test_secondary_analysis.py  test_services.py  test_spatial_radius.py
backend/wildfire_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+602 files in other folders)
